[gd_scene load_steps=7 format=3 uid="uid://dehwcpci6rlsw"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_yko8m"]

[sub_resource type="SphereMesh" id="SphereMesh_srp88"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pue73"]

[sub_resource type="SphereMesh" id="SphereMesh_3x7te"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wog7a"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ca78c"]
points = PackedVector3Array(0, 0, 0, 7.5, 0, -6.2, -7.5, 0, -6.4, 0, 0.546, 0, 7.5, 0.847, -6.2, -7.5, 0.743, -6.4)

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.490347, 0)
script = ExtResource("1_yko8m")
way_points = Array[Marker3D]([null, null])

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_srp88")
skeleton = NodePath("../Shape")

[node name="Shape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_pue73")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="PatrolTimer" type="Timer" parent="."]
one_shot = true

[node name="gun" type="MeshInstance3D" parent="."]
transform = Transform3D(0.27811, 0, 0, 0, 0.31537, 0, 0, 0, 1.05156, 0.0116106, 0, -0.604748)
mesh = SubResource("SphereMesh_3x7te")

[node name="HearingFar" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingFar"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
shape = SubResource("SphereShape3D_wog7a")

[node name="HearingClose" type="Area3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingClose"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
shape = SubResource("SphereShape3D_wog7a")

[node name="SlightClose" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SlightClose"]
shape = SubResource("ConvexPolygonShape3D_ca78c")

[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="body_entered" from="HearingFar" to="." method="_on_hearing_far_body_entered"]
[connection signal="body_exited" from="HearingFar" to="." method="_on_hearing_far_body_exited"]
[connection signal="body_entered" from="HearingClose" to="." method="_on_hearing_close_body_entered"]
[connection signal="body_exited" from="HearingClose" to="." method="_on_hearing_close_body_exited"]
[connection signal="body_entered" from="SlightClose" to="." method="_on_slight_close_body_entered"]
[connection signal="body_exited" from="SlightClose" to="." method="_on_slight_close_body_exited"]
